<resources>
    <string name="app_name" translatable="false">DinoMap</string>
    <string name="map">Carte</string>
    <string name="encyclopedia">Encyclopédie</string>
    <string name="quiz">Quiz</string>
    <string name="cambrien" translatable="false">CAMBRIEN</string>
    <string name="ordovicien" translatable="false">ORDOVICIEN</string>
    <string name="silurien" translatable="false">SILURIEN</string>
    <string name="devonien" translatable="false">DEVONIEN</string>
    <string name="carbonifere" translatable="false">CARBONIFERE</string>
    <string name="permien" translatable="false">PERMIEN</string>
    <string name="trias" translatable="false">TRIAS</string>
    <string name="jurassique" translatable="false">JURASSIQUE</string>
    <string name="cretace" translatable="false">CRETACE</string>
    <string name="paleozoique" translatable="false">PALEOZOIQUE</string>
    <string name="mesozoique" translatable="false">MESOZOIQUE</string>
    <string name="title_activity_maps">Carte</string>
    <string name="placeholder_name_sc" translatable="false">Nom Scientifique</string>
    <string name="placeholder_name_com" translatable="false">Nom commun</string>
    <string name="title_encyclo_menu">Encyclopedie</string>
    <string name="content_description_return_button">Bouton retour</string>

    <string name="encyclopedia_taille">Taille :</string>
    <string name="encyclopedia_poids">Poids :</string>
    <string name="encyclopedia_epoque">Epoque :</string>
    <string name="encyclopedia_lieu">Lieu \:</string>
    <string name="encyclopedia_regime">Régime :</string>

    <string name="audrezet" translatable="false">Rémi AUDRÉZET</string>
    <string name="croq" translatable="false">Camille CROQ</string>
    <string name="baron" translatable="false">Alexandre BARON</string>
    <string name="rouxel" translatable="false">Valentin ROUXEL</string>

    <string name="map_titre">Carte des dinosaures</string>

    <string name="debloquerDinoTitre">Débloquer les informations complémentaires</string>
    <string name="debloquerDinoMessage">Débloquer les informations coûtent 10 pièces.</string>
    <string name="debloquerDinoMessageInsuffisant">Il vous manque %d pièces.</string>
    <string name="debloquerDinoMessageAchat">Vous avez %d pièces.</string>

    <string name="oui">oui</string>
    <string name="non">non</string>
    <string name="ok">ok</string>

    <string name="metre">mètre</string>
    <string name="decimetre">décimètre</string>
    <string name="centimetre">centimètre</string>

    <string name="tonne">tonne</string>
    <string name="kilo">kilogramme</string>
    <string name="gramme">gramme</string>
    <string name="milligramme">milligramme</string>

    <string name="plurielUnite">s</string>

    <string name="tuto1">Vous avez le choix de choisir entre explorer la carte, faire des quiz, explorer l’encyclopédie et savoir qui a fait l’application.</string>
    <string name="tuto2"></string>
</resources>
