<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/return_button"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:layout_weight="0.5"
            app:srcCompat="@android:drawable/ic_menu_revert" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:paddingLeft="20dp">

            <TextView
                android:id="@+id/text_nomSDino"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="0.5"
                android:text="Nom du dinosaure"
                android:textColor="@color/colorBlack"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/text_nomCDino"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_weight="0.5"
                android:text="TextView"
                android:textColor="@color/colorBlack"
                android:textSize="25sp" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/img_dino"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="75dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

    <ImageButton
        android:id="@+id/bouton_lock"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_secure" />

    <LinearLayout
        android:id="@+id/text_info_dino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:paddingStart="5dp"
        app:layout_constraintBottom_toTopOf="@+id/bouton_lock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_dino"
        app:layout_constraintVertical_bias="0.787">

        <TextView
            android:id="@+id/text_tailleDino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encyclopedia_taille"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/text_poidsDino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encyclopedia_poids"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/text_epoqueDino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encyclopedia_epoque"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/text_localisationDino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encyclopedia_lieu"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/text_regimeDino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encyclopedia_regime"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>